--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -354,3 +354,18 @@ footer p + p {
     content: 'at https://github.com/';
   }
 }
+    #cardflip {
+        width: 200px;
+        height: 260px;
+        position: relative;
+        perspective: 800px;
+    }
+    #card1 {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        transform-style: preserve-3d;
+        transition: transform 1s;
+    }
+
+
