--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -368,4 +368,27 @@ footer p + p {
         transition: transform 1s;
     }
 
+    #card1 div{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+    }
+
+    #card1 .front {
+        background: red;
+    }
+    #card1 .back {
+        background: blue;
+        transform: rotateY( 180deg );
+    }
+    #card1.flipped {
+        transform: rotateY( 180deg );
+    }
+
+    #card1 { transform-origin: left center; }
+    #card1.flipped {
+      transform: translateX( 100% ) rotateY( 180deg );
+    }
+
 
